--- a/MOM_2019_42.html
+++ b/MOM_2019_42.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        <link rel="icon" href="favicon.png">
         <title>Infovis - Campeonato Mundial de Ironman</title>
     </head>
     <body>
